--- a/2024.Unreal.Engine.Plugins.for.JSON.md
+++ b/2024.Unreal.Engine.Plugins.for.JSON.md
@@ -191,19 +191,19 @@ Before you begin, ensure that you have the following:
 
 For Windows Users:
 
-	1.	**Install Visual Studio:**
+1.	**Install Visual Studio:**
 * Download and install Visual Studio.
 * During installation, select the “Game development with C++” workload, which includes necessary components like the Windows 10 SDK.
-	2.	**Verify Installation**:
-* **Open Visual Studio to ensure it installed correctly.
+2.	**Verify Installation**:
+* Open Visual Studio to ensure it installed correctly.
 
 For macOS Users:
 
-	1.	**Install Xcode**:
-* **Download and install Xcode from the App Store.
-	2.	**Install Command Line Tools**:
-* **Open Terminal and run:
-```
+1.	**Install Xcode**:
+* Download and install Xcode from the App Store.
+2.	**Install Command Line Tools**:
+* Open Terminal and run:
+```bash
 xcode-select --install
 ```
 
@@ -223,7 +223,7 @@ If you haven’t created your plugin yet, follow these steps to add a new C++ pl
 * Name your plugin (e.g., MyCustomPlugin) and click “Create Plugin”.
 	3.	**Locate the Plugin Folder**:
 * Plugins are typically stored in the Plugins directory within your project folder:
-```
+```bash
 YourProject/
 └── Plugins/
     └── MyCustomPlugin/
@@ -255,11 +255,11 @@ Using Command Line:
 Navigate to your project directory and run:
 
 # For Windows
-```
+```bash
 "path\to\UnrealEngine\Engine\Binaries\DotNET\UnrealBuildTool.exe" -projectfiles -project="path\to\YourProject.uproject" -game -engine -progress
 ```
 # For macOS
-```
+```bash
 /path/to/UnrealEngine/Engine/Binaries/Mac/UnrealBuildTool -projectfiles -project="path/to/YourProject.uproject" -game -engine -progress
 ```
 Adjust the paths according to your Unreal Engine installation and project location.
@@ -299,18 +299,18 @@ Method 2: Using an IDE (e.g., Visual Studio)
 Method 3: Using Command Line
 
 1.	**Navigate to Your Project Directory**:
-```
+```bash
 cd path/to/YourProject
 ```
 
 2.	**Run UnrealBuildTool**:
 
 # For Windows
-```
+```bash
 "path\to\UnrealEngine\Engine\Binaries\DotNET\UnrealBuildTool.exe" YourProjectEditor Win64 Development -project="path\to\YourProject.uproject" -plugin="path\to\YourPlugin.uplugin"
 ```
 # For macOS
-```
+```bash
 /path/to/UnrealEngine/Engine/Binaries/Mac/UnrealBuildTool YourProjectEditor Mac Development -project="path/to/YourProject.uproject" -plugin="path/to/YourPlugin.uplugin"
 ```
 Replace YourProjectEditor, Win64, Mac, and paths with your actual project and plugin names.
@@ -334,18 +334,18 @@ Note: Hot Reload may not always work perfectly, especially for significant chang
 
 Using IDE (Visual Studio)
 
-	1.	Open Your Project in Visual Studio.
-	2.	Make Code Changes.
-	3.	Build the Plugin Module:
+1.	Open Your Project in Visual Studio.
+2.	Make Code Changes.
+3.	Build the Plugin Module:
 * Right-click your plugin module in Solution Explorer and select “Build” or “Rebuild”.
-	4.	Switch Back to Unreal Editor:
+4.	Switch Back to Unreal Editor:
 * If the build is successful, the changes should reflect in the editor. If not, restart the editor.
 
 Using Command Line
 
-	1.	Make Code Changes.
-	2.	Run the Build Command (as described in Method 3).
-	3.	Verify the Build:
+1.	Make Code Changes.
+2.	Run the Build Command (as described in Method 3).
+3.	Verify the Build:
 * Ensure there are no errors and the build completes successfully.
 
 7. Troubleshooting Common Issues
@@ -522,12 +522,12 @@ b. Packaging the Plugin
 * **Step 4**: Wait for Packaging to Complete:
 * The packaging process will compile the necessary binaries and assemble the plugin files into a distributable format.
 
-	2.	**Manual Packaging**:
+2.	**Manual Packaging**:
 * **Step 1**: Locate Plugin Folder:
 * Navigate to your plugin’s directory within the project or engine’s Plugins folder.
 * **Step 2**: Organize Files:
 * Ensure that the folder structure follows Unreal Engine’s standards:
-```
+```bash
 MyCustomPlugin/  
 ├── Binaries/  
 ├── Resources/  
@@ -545,18 +545,18 @@ c. Publishing to the Unreal Engine Marketplace
 
 If you intend to publish your plugin to the Unreal Engine Marketplace, follow these additional steps:
 
-	1.	Review Marketplace Requirements:
-* **Familiarize yourself with the Unreal Engine Marketplace Submission Guidelines.
-	2.	Create an Account:
-* **Sign up for a Unreal Engine Marketplace Publisher Account.
-	3.	Prepare Promotional Materials:
-* **Create high-quality screenshots, videos, and documentation to showcase your plugin’s features.
-	4.	Submit Your Plugin:
-* **Follow the submission process on the Marketplace portal, providing all necessary information and assets.
-	5.	Await Approval:
-* **Epic Games will review your submission. Address any feedback or required changes promptly.
-	6.	Maintain and Update:
-* **After approval, ensure that you maintain your plugin by providing updates, fixing bugs, and supporting users.
+1.	**Review Marketplace Requirements**:
+* Familiarize yourself with the Unreal Engine Marketplace Submission Guidelines.
+2.	**Create an Account**:
+* Sign up for a Unreal Engine Marketplace Publisher Account.
+3.	**Prepare Promotional Materials**:
+* Create high-quality screenshots, videos, and documentation to showcase your plugin’s features.
+4.	**Submit Your Plugin**:
+* Follow the submission process on the Marketplace portal, providing all necessary information and assets.
+5.	**Await Approval**:
+* Epic Games will review your submission. Address any feedback or required changes promptly.
+6.	**Maintain and Update**:
+* After approval, ensure that you maintain your plugin by providing updates, fixing bugs, and supporting users.
 
 11. Testing Your Plugin
 
@@ -564,10 +564,10 @@ Comprehensive testing is crucial to ensure that your plugin works as intended ac
 
 a. Unit Testing
 
-	1.	Set Up a Testing Framework:
-* **Unreal Engine supports unit testing using the Automation Testing Framework.
-	2.	Create Test Cases:
-* **Write test cases for individual functions and components of your plugin to verify their behavior.
+1.	Set Up a Testing Framework:
+* Unreal Engine supports unit testing using the Automation Testing Framework.
+2.	Create Test Cases:
+* Write test cases for individual functions and components of your plugin to verify their behavior.
 ```cpp
 // Example: MyCustomPluginTests.cpp
 #include "MyCustomPlugin.h"
@@ -590,25 +590,25 @@ bool FMyPluginFunctionTest::RunTest(const FString& Parameters)
 }
 ```
 
-	3.	Run Tests:
-* **In Unreal Editor, open the Session Frontend (Window > Developer Tools > Session Frontend).
-* **Navigate to the Automation tab and run your tests.
+3.	**Run Tests**:
+* In Unreal Editor, open the Session Frontend (Window > Developer Tools > Session Frontend).
+* Navigate to the Automation tab and run your tests.
 
 b. Integration Testing
 
-	1.	Create a Test Project:
-* **Develop a separate Unreal project to test your plugin in isolation and within different project configurations.
-	2.	Test Plugin Features:
-* **Verify that all functionalities provided by your plugin work correctly when integrated with other systems and plugins.
-	3.	Check for Conflicts:
-* **Ensure that your plugin does not cause conflicts or unexpected behavior when used alongside other plugins or engine features.
+1.	**Create a Test Project**:
+* Develop a separate Unreal project to test your plugin in isolation and within different project configurations.
+2.	**Test Plugin Features**:
+* Verify that all functionalities provided by your plugin work correctly when integrated with other systems and plugins.
+3.	**Check for Conflicts**:
+* Ensure that your plugin does not cause conflicts or unexpected behavior when used alongside other plugins or engine features.
 
 c. User Acceptance Testing (UAT)
 
-	1.	Gather Feedback:
-* **Share your plugin with a small group of users or colleagues to gather feedback on usability, functionality, and any issues encountered.
-	2.	Iterate Based on Feedback:
-* **Make necessary adjustments and improvements based on the feedback received to enhance the plugin’s quality and user experience.
+1.	**Gather Feedback**:
+* Share your plugin with a small group of users or colleagues to gather feedback on usability, functionality, and any issues encountered.
+2.	**Iterate Based on Feedback**:
+* Make necessary adjustments and improvements based on the feedback received to enhance the plugin’s quality and user experience.
 
 12. Integrating with Continuous Integration (CI) Systems
 
@@ -618,20 +618,20 @@ a. Choose a CI Service
 
 Popular CI services that integrate well with Unreal Engine include:
 
-* **GitHub Actions
-* **GitLab CI/CD
-* **Jenkins
-* **Azure DevOps
-* **CircleCI
+* **GitHub Actions**
+* **GitLab CI/CD**
+* **Jenkins**
+* **Azure DevOps**
+* **CircleCI**
 
 b. Configure Your CI Pipeline
 
-	1.	Set Up Repository:
-* **Host your plugin’s source code on a version control platform like GitHub or GitLab.
-	2.	Create CI Configuration Files:
-* **Define your build and test steps in configuration files specific to your chosen CI service.
+1.	**Set Up Repository**:
+* Host your plugin’s source code on a version control platform like GitHub or GitLab.
+2.	**Create CI Configuration Files**:
+* Define your build and test steps in configuration files specific to your chosen CI service.
 Example: GitHub Actions Workflow (.github/workflows/unreal-build.yml)
-```
+```bash
 name: Unreal Engine Plugin Build
 
 on:
@@ -665,18 +665,18 @@ jobs:
         "C:\Program Files\Epic Games\UE_4.27\Engine\Build\BatchFiles\RunUAT.bat" RunTests -project="YourPlugin.uproject" -testlist="YourTestList"
 ```
 Notes:
-* **Adjust the Unreal Engine version and paths according to your setup.
-* **Ensure that any secrets or sensitive information are securely managed within your CI service.
+* Adjust the Unreal Engine version and paths according to your setup.
+* Ensure that any secrets or sensitive information are securely managed within your CI service.
 
-	3.	Automate Builds and Tests:
-* **Configure the CI pipeline to trigger on events like code pushes or pull requests, ensuring that your plugin is automatically built and tested.
+3.	**Automate Builds and Tests**:
+* Configure the CI pipeline to trigger on events like code pushes or pull requests, ensuring that your plugin is automatically built and tested.
 
 c. Monitor and Maintain CI Pipelines
 
-* **Monitor Build Status:
-* **Regularly check the status of your CI pipelines to identify and address any build or test failures promptly.
-* **Update Pipelines as Needed:
-* **Adjust your CI configurations to accommodate changes in your plugin’s structure, dependencies, or Unreal Engine versions.
+* Monitor Build Status:
+* Regularly check the status of your CI pipelines to identify and address any build or test failures promptly.
+* Update Pipelines as Needed:
+* Adjust your CI configurations to accommodate changes in your plugin’s structure, dependencies, or Unreal Engine versions.
 
 13. Optimizing Plugin Performance
 
@@ -684,27 +684,27 @@ Ensuring that your plugin performs efficiently is vital for maintaining high-qua
 
 a. Profiling and Benchmarking
 
-	1.	Use Unreal Insights:
-* **Utilize Unreal Insights to analyze the performance of your plugin within the Unreal Engine environment.
-	2.	Identify Bottlenecks:
-* **Profile your plugin to pinpoint areas where performance can be improved, such as CPU-intensive operations or memory leaks.
-	3.	Benchmark Critical Paths:
-* **Establish benchmarks for critical functions to measure improvements and ensure consistent performance.
+1.	**Use Unreal Insights**:
+* Utilize Unreal Insights to analyze the performance of your plugin within the Unreal Engine environment.
+2.	**Identify Bottlenecks**:
+* Profile your plugin to pinpoint areas where performance can be improved, such as CPU-intensive operations or memory leaks.
+3.	**Benchmark Critical Paths**:
+* Establish benchmarks for critical functions to measure improvements and ensure consistent performance.
 
 b. Optimize Code
 
-	1.	Efficient Algorithms:
-* **Implement algorithms with optimal time and space complexity to enhance performance.
-	2.	Memory Management:
-* **Manage memory usage effectively by avoiding unnecessary allocations and deallocations.
-* **Utilize Unreal Engine’s memory management systems, such as garbage collection and smart pointers (TSharedPtr, TWeakPtr).
-	3.	Minimize Overhead:
-* **Reduce the overhead in frequently called functions by minimizing complex computations and leveraging caching where appropriate.
+1.	**Efficient Algorithms**:
+* Implement algorithms with optimal time and space complexity to enhance performance.
+2.	**Memory Management**:
+* Manage memory usage effectively by avoiding unnecessary allocations and deallocations.
+* Utilize Unreal Engine’s memory management systems, such as garbage collection and smart pointers (TSharedPtr, TWeakPtr).
+3.	**Minimize Overhead**:
+* Reduce the overhead in frequently called functions by minimizing complex computations and leveraging caching where appropriate.
 
 c. Reduce Load Times
 
-	1.	Asynchronous Operations:
-* **Offload heavy tasks to asynchronous threads to prevent blocking the main thread, improving responsiveness.
+1.	*Asynchronous Operations*:
+* Offload heavy tasks to asynchronous threads to prevent blocking the main thread, improving responsiveness.
 ```cpp
 // Example: Using Async Task
 AsyncTask(ENamedThreads::AnyBackgroundThreadNormalTask, []()
@@ -713,22 +713,22 @@ AsyncTask(ENamedThreads::AnyBackgroundThreadNormalTask, []()
 });
 ```
 
-	2.	Lazy Loading:
-* **Load resources or components only when they are needed, reducing initial load times.
+2.	**Lazy Loading**:
+* Load resources or components only when they are needed, reducing initial load times.
 
 d. Optimize Asset Usage
 
-	1.	Efficient Asset Management:
-* **Use optimized asset formats and compress assets where possible to minimize memory footprint.
-	2.	Asset Streaming:
-* **Implement asset streaming techniques to load and unload assets dynamically based on usage.
+1.	**Efficient Asset Management**:
+* Use optimized asset formats and compress assets where possible to minimize memory footprint.
+2.	**Asset Streaming**:
+* Implement asset streaming techniques to load and unload assets dynamically based on usage.
 
 e. Leverage Unreal Engine’s Optimization Tools
 
-	1.	Blueprint Nativization:
-* **If your plugin uses Blueprints, consider nativizing them to C++ for improved performance.
-	2.	Code Optimization Flags:
-* **Utilize compiler optimization flags in your .Build.cs file to enhance the performance of your plugin binaries.
+1.	**Blueprint Nativization**:
+* If your plugin uses Blueprints, consider nativizing them to C++ for improved performance.
+2.	**(Code Optimization Flags)**:
+* Utilize compiler optimization flags in your .Build.cs file to enhance the performance of your plugin binaries.
 ```cpp
 // Example: Enabling Optimization Flags
 if (Target.Configuration == UnrealTargetConfiguration.Shipping)
@@ -742,25 +742,25 @@ Properly managing dependencies and maintaining version control are essential for
 
 a. Managing Dependencies
 
-	1.	Use .Build.cs Appropriately:
-* **Declare all necessary dependencies in your plugin’s .Build.cs file to ensure that Unreal Engine includes them during the build process.
-
+1.	Use .Build.cs Appropriately:
+* Declare all necessary dependencies in your plugin’s .Build.cs file to ensure that Unreal Engine includes them during the build process.
+```cpp
 PublicDependencyModuleNames.AddRange(new string[] { "Core", "CoreUObject", "Engine", "Json", "JsonUtilities", "JWT" });
+```
 
-
-	2.	**Handle Third-Party Libraries:**
-* **If your plugin relies on third-party libraries**, ensure that they are correctly integrated and that their licenses permit distribution.
-	3.	**Version Compatibility:**
-* **Maintain compatibility** with specific Unreal Engine versions by testing and updating dependencies as needed.
+2.	**Handle Third-Party Libraries:**
+* If your plugin relies on third-party libraries, ensure that they are correctly integrated and that their licenses permit distribution.
+3.	**Version Compatibility:**
+* Maintain compatibility** with specific Unreal Engine versions by testing and updating dependencies as needed.
 
 b. Version Control Best Practices
 
-	1.	**Use Git or Other VCS**:
-* **Implement a version control system** like Git to track changes, manage branches, and collaborate effectively.
-	2.	**.gitignore Configuration:**
-* **Configure your .gitignore** file to exclude build artifacts, binaries, and other non-essential files.
+1.	**Use Git or Other VCS**:
+* Implement a version control system like Git to track changes, manage branches, and collaborate effectively.
+2.	**.gitignore Configuration:**
+* Configure your .gitignore file to exclude build artifacts, binaries, and other non-essential files.
 Example .gitignore for Unreal Engine Projects:
-
+```bash
 Binaries/
 DerivedDataCache/
 Intermediate/
@@ -769,7 +769,7 @@ Saved/
 *.suo
 *.user
 *.userprefs
-
+```
 
 	3.	**Branching Strategy:**
 * **Adopt a branching strategy (e.g., Gitflow) to manage feature development, releases, and hotfixes systematically.
@@ -777,11 +777,10 @@ Saved/
 * **Use clear and descriptive commit messages to document changes and facilitate easier code reviews and history tracking.
 	5.	**Tagging Releases**:
 * **Tag stable releases** to mark specific points in the repository’s history, making it easier to reference or roll back to known good states.
-
+```bash
 git tag -a v1.0 -m "Initial release of MyCustomPlugin"
 git push origin v1.0
-
-
+```
 
 c. Documentation and Changelogs
 
